--- a/doc_classic/examples/animate.in
+++ b/doc_classic/examples/animate.in
@@ -74,14 +74,14 @@ mkdir -p "$exec_dir"
 cd "$exec_dir"
 # The GLOBIGNORE is not working for Paul on OSX - unknown why.
 # Until this can be solved I have replaced it with an egrep.
-#GLOBIGNORE="*.bat:*.ps:*.sh"
-#for file in "$src"/* ; do
-#  test -f "$file" && ln -s "$file" .
-#done
-#unset GLOBIGNORE
-for file in `ls "$src"/* | egrep -v '.bat$|.ps$|.sh$'` ; do
+GLOBIGNORE="*.bat:*.ps:*.sh"
+for file in "$src"/* ; do
   test -f "$file" && ln -s "$file" .
 done
+unset GLOBIGNORE
+#for file in `ls "$src"/* | egrep -v '.bat$|.ps$|.sh$'` ; do
+#  test -f "$file" && ln -s "$file" .
+#done
 
 # Start with proper GMT defaults
 gmt set -Du FORMAT_TIME_STAMP "Version 6"
