--- a/doc_classic/examples/gmtest.in
+++ b/doc_classic/examples/gmtest.in
@@ -154,14 +154,14 @@ cd "$exec_dir"
 # The GLOBIGNORE is not working for Paul on OSX - unknown why.
 # Until this can be solved I have replaced it with an egrep.
 #
-#GLOBIGNORE="*.bat:*.ps:*.sh"
-#for file in "$src"/* ; do
-#  test -f "$file" && ln -s "$file" .
-#done
-#unset GLOBIGNORE
-for file in `ls "$src"/* | egrep -v '.bat$|.ps$|.sh$'` ; do
+GLOBIGNORE="*.bat:*.ps:*.sh"
+for file in "$src"/* ; do
   test -f "$file" && ln -s "$file" .
 done
+unset GLOBIGNORE
+#for file in `ls "$src"/* | egrep -v '.bat$|.ps$|.sh$'` ; do
+#  test -f "$file" && ln -s "$file" .
+#done
 
 if [ "X$script_mode" = "XM" ]; then
 	# Test a modernized version of the script instead
