--- a/doc_modern/rst/conf.py.in
+++ b/doc_modern/rst/conf.py.in
@@ -128,7 +128,8 @@ html_theme_path = ["_themes"]
 # Add any paths that contain custom static files (such as style sheets) here,
 # relative to this directory. They are copied after the builtin static files,
 # so a file named "default.css" will overwrite the builtin "default.css".
-#html_static_path = ['_static']
+# We set html_static below so that sphinx copies video files to html/_static
+html_static_path = ['_source/_static']
 
 # If not '', a 'Last updated on:' timestamp is inserted at every page bottom,
 # using the given strftime format.
