Use GMT_SESSION_NAME instead of GMT_PPID
Expert users may wish to supply a unique session name which will allow then to use sub-shells while running modern mode.  Thus, we allow this name to be a string and hence are renaming the GMT_PPID environmental variable to a more generic name.  Under the hood, if no such variable is set we create one as before from the parent process id.

--- a/doc_classic/examples/animate.in
+++ b/doc_classic/examples/animate.in
@@ -87,8 +87,8 @@ if [ "X$script_mode" = "XM" ]; then
 	if [ $classic -eq 0 ]; then
 		echo "Modernizing $script to $local_script before testing"
 		gmtmodernize "$script" > ./${local_script}
-		export GMT_PPID=$$
-		echo "Set GMT_PPID = $GMT_PPID"
+		export GMT_SESSION_NAME=$$
+		echo "Set GMT_SESSION_NAME = $GMT_SESSION_NAME"
 		. "${local_script}" animate
 	else
 		echo "Cannot modernize classic GMT script ${script}. Run in classic mode" >&2
