--- a/doc_modern/examples/gmtest.in
+++ b/doc_modern/examples/gmtest.in
@@ -192,8 +192,8 @@ export GS_FONTPATH="@CMAKE_CURRENT_SOURCE_DIR@/ex31/fonts"
 gmt set -Du FORMAT_TIME_STAMP "Version 6"
 # Modern mode needs a stable PPID but ctest messes that up when pipes are used
 if [ "X$script_mode" = "XM" ]; then
-	export GMT_PPID=\$\$
-	echo "Set GMT_PPID = \$GMT_PPID"
+	export GMT_SESSION_NAME=\$\$
+	echo "Set GMT_SESSION_NAME = \$GMT_SESSION_NAME"
 fi
 # Now run the script
 . "${local_script}"
