--- a/doc_modern/scripts/CMakeLists.txt
+++ b/doc_modern/scripts/CMakeLists.txt
@@ -192,15 +192,15 @@ if (NOT EXISTS ${GMT_INSTALL_EXTERNAL_DOC})
 endif (NOT EXISTS ${GMT_INSTALL_EXTERNAL_DOC})
 
 # Install target for release documentation
-if (SVN AND HAVE_SVN_VERSION)
+if (GIT AND HAVE_GIT_VERSION)
 	foreach (_fig ${_install_pdf})
 		add_custom_target (_${_fig}_release
 			COMMAND ${CMAKE_COMMAND} -E copy_if_different
 			${RST_BINARY_DIR}/_images/${_fig}
 			${GMT_RELEASE_PREFIX}/doc_release/pdf/${_fig}
-			DEPENDS ${RST_BINARY_DIR}/_images/${_fig} svn_export_release)
+			DEPENDS ${RST_BINARY_DIR}/_images/${_fig} git_export_release)
 		add_depend_to_target (gmt_release _${_fig}_release)
 	endforeach (_fig ${_install_pdf})
-endif (SVN AND HAVE_SVN_VERSION)
+endif (GIT AND HAVE_GIT_VERSION)
 
 # vim: textwidth=78 noexpandtab tabstop=2 softtabstop=2 shiftwidth=2
