--- a/doc/scripts/CMakeLists.txt
+++ b/doc/scripts/CMakeLists.txt
@@ -187,7 +187,7 @@ if (NOT EXISTS ${GMT_INSTALL_EXTERNAL_DOC})
 endif (NOT EXISTS ${GMT_INSTALL_EXTERNAL_DOC})
 
 # Install target for realease documentation
-if (SVN AND HAVE_SVN_VERSION)
+if (GIT AND HAVE_SVN_VERSION)
 	foreach (_fig ${_install_pdf})
 		add_custom_target (_${_fig}_release
 			COMMAND ${CMAKE_COMMAND} -E copy_if_different
@@ -196,6 +196,6 @@ if (SVN AND HAVE_SVN_VERSION)
 			DEPENDS ${RST_BINARY_DIR}/_images/${_fig} svn_export_release)
 		add_depend_to_target (gmt_release _${_fig}_release)
 	endforeach (_fig ${_install_pdf})
-endif (SVN AND HAVE_SVN_VERSION)
+endif (GIT AND HAVE_SVN_VERSION)
 
 # vim: textwidth=78 noexpandtab tabstop=2 softtabstop=2 shiftwidth=2
