Remove brew update

--- a/.travis.yml
+++ b/.travis.yml
@@ -100,7 +100,10 @@ before_install:
       if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
         # Download dependencies if not cached (https://stackoverflow.com/a/52446551)
         DEB_CACHE=$HOME/cache-deb
-        DEB_PACKAGES="cmake ninja-build libcurl4-gnutls-dev libnetcdf-dev libgdal1-dev libfftw3-dev libpcre3-dev liblapack-dev ghostscript curl graphicsmagick ffmpeg python python-pip texlive-latex-extra"
+        DEB_PACKAGES="cmake ninja-build libcurl4-gnutls-dev libnetcdf-dev libgdal1-dev libfftw3-dev libpcre3-dev liblapack-dev ghostscript curl"
+        if [ "$BUILD_DOCS" == "true" ]; then
+          DEB_PACKAGES="$DEB_PACKAGES graphicsmagick ffmpeg python python-pip texlive-latex-extra"
+        fi
         test -d $DEB_CACHE || mkdir $DEB_CACHE
         echo "Copy cached deb packages"
         sudo rsync -av ${DEB_CACHE}/ /var/cache/apt/archives/
@@ -111,10 +114,9 @@ before_install:
         rsync -av /var/cache/apt/archives/*.deb ${DEB_CACHE}/
       fi
     - |-
-    # Update homebrew and add ccache to PATH:
+    # On OSX add ccache to PATH:
     - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
         export PATH="/usr/local/opt/ccache/libexec:$PATH";
-        brew update;
       fi
     - mkdir "$INSTALLDIR"
     - mkdir "$COASTLINEDIR"
