--- a/.travis.yml
+++ b/.travis.yml
@@ -73,7 +73,7 @@ matrix:
           if: type != cron
         - name: "Linux (cron)"
           os: linux
-          if: type = cron
+          if: type != cron
           env:
             - TEST="true"
         - name: "Mac (compile only)"
@@ -87,7 +87,7 @@ matrix:
         # Only build the docs on Linux cron jobs
         - name: "Linux (cron - build docs)"
           os: linux
-          if: type = cron
+          if: type != cron
           env:
             - BUILD_DOCS=true
             - DEPLOY_DOCS=true
