--- a/.travis.yml
+++ b/.travis.yml
@@ -138,7 +138,7 @@ script:
     - gmt defaults -Vd
     - gmt pscoast -R0/10/0/10 -JM6i -Ba -Ggray -P -Vd > test.ps
     - if [[ "$TEST" == "true" ]]; then
-        cmake --build . --target check;
+        ctest --force-new-ctest-process -j4
       fi
     # Upload test coverage even if build fails. Keep separate to make sure this task
     # fails if the tests fail.
@@ -150,7 +150,7 @@ script:
     - set -e
     - if [[ "$BUILD_DOCS" == "true" ]]; then
         cmake --build . --target docs_depends;
-        cmake --build . --target animation;
+        travis_wait cmake --build . --target animation;
         cmake --build . --target docs_html;
         cmake --build . --target docs_pdf;
       fi
