--- a/.travis.yml
+++ b/.travis.yml
@@ -73,7 +73,7 @@ matrix:
           if: type != cron
         - name: "Linux (cron)"
           os: linux
-          if: type = cron
+          #if: type = cron
           env:
             - TEST="true"
         - name: "Mac (compile only)"
