Fixes several typos

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -171,7 +171,7 @@ if (OPENMP_FOUND AND GMT_OPENMP)
 		CACHE INTERNAL "OPENMP config message")
 	if (WIN32 AND OMP_DLL_LOC)
 		# UGLY AND RISKY PATCH FOR THE CPACK BUG OF NOT COPYING THE OMP DLL. THIS PATCH RELIES
-		# ON THE SETING OF THE OMP_DLL_LOC VARIABLE IN ConfigUser.cmake. MINE HAS:
+		# ON THE SETTING OF THE OMP_DLL_LOC VARIABLE IN ConfigUser.cmake. MINE HAS:
 		# set (OMP_DLL_LOC "C:/Program Files (x86)/Microsoft Visual Studio 12.0/VC/redist/x64/Microsoft.VC120.OPENMP/vcomp120.dll")
 		install(FILES ${OMP_DLL_LOC} DESTINATION bin COMPONENT Libraries)
 	endif (WIN32 AND OMP_DLL_LOC)
