--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -39,7 +39,7 @@ jobs:
 
   - bash: |
       set -x -e
-      brew install cmake ninja curl netcdf gdal fftw pcre2 ghostscript curl graphicsmagick
+      brew install cmake ninja curl netcdf gdal fftw pcre2 ghostscript curl graphicsmagick glibtool
     displayName: Install dependencies
 
   - bash: |
