--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -23,10 +23,6 @@ jobs:
     vmImage: 'macOS-10.13'
 
   variables:
-    HOME: "$BUILD_SOURCESDIRECTORY"
-    INSTALLDIR: "$HOME/gmt-install-dir"
-    COASTLINEDIR: "$HOME/gmt-install-dir/coast"
-    #PATH: "$INSTALLDIR/bin:$PATH"
     BUILD_DOCS: false
 
   strategy:
@@ -45,12 +41,16 @@ jobs:
 
   - bash: |
       set -x -e
+      echo "##vso[task.setvariable variable=INSTALLDIR]$BUILD_SOURCESDIRECTORY/gmt-install-dir"
+      echo "##vso[task.setvariable variable=COASTLINEDIR]$BUILD_SOURCESDIRECTORY/gmt-install-dir/coast"
+      echo "##vso[task.prependpath]$BUILD_SOURCESDIRECTORY/gmt-install-dir/bin"
+    displayName: Set environment variables
+
+  - bash: |
+      set -x -e
       mkdir "$INSTALLDIR"
       mkdir "$COASTLINEDIR"
     displayName: Create install directories
-
-  - bash: echo "##vso[task.prependpath]$INSTALLDIR/bin"
-    displayName: Add GMT to PATH
 
   - bash: ci/download-coastlines.sh
     displayName: Download coastlines
