--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -41,8 +41,8 @@ jobs:
 
   - bash: |
       set -x -e
-      echo "##vso[task.setvariable variable=INSTALLDIR]$BUILD_SOURCESDIRECTORY/gmt-install-dir"
-      echo "##vso[task.setvariable variable=COASTLINEDIR]$BUILD_SOURCESDIRECTORY/gmt-install-dir/coast"
+      echo "##vso[task.setvariable variable=INSTALLDIR]gmt-install-dir"
+      echo "##vso[task.setvariable variable=COASTLINEDIR]gmt-install-dir/coast"
       echo "##vso[task.prependpath]$BUILD_SOURCESDIRECTORY/gmt-install-dir/bin"
     displayName: Set environment variables
 
