--- a/share/custom/gmt_custom_symbols.conf
+++ b/share/custom/gmt_custom_symbols.conf
@@ -4,33 +4,44 @@
 #	symbols, create the *.def file, place it in share/custom,
 #	and add a 1-line entry (alphabetically) in this list.
 #----------------------------------------------------------------
-astroid     : 4-pointed concave star symbol
-crosshair   : Bullseye crosshair
-deltoid     : 3-pointed concave triangle symbol
-flash       : Lightning flash symbol
-hlens       : Horizontal convex lens symbol
-hlozenge    : Narrow horizontal diamond-like symbol
-hneedle     : Horizontal, very narrow diamond
-hurricane   : Hurricane symbol
-lcrescent   : Crescent with belly to the left
-lflag       : Post with flag to the left
-ltriangle   : Triangle pointing to the left
-meca        : Focal mechanism (beachball)
-pacman      : A Pacman symbol
-rcrescent   : Crescent with belly to the right
-rflag       : Post with flag to the right
-rtriangle   : Triangle pointing to the right
-sectoid     : Concave, triangular sector
-squaroid    : Concave square
-star3       : 3-pointed triangular star symbol
-star4       : 4-pointed diagonal star symbol
-starp       : 4-pointed polar star
-sun         : Shining sun symbol
-trirot1     : 90-degree triangle in 1st quadrant
-trirot2     : 90-degree triangle in 2nd quadrant
-trirot3     : 90-degree triangle in 3rd quadrant
-trirot4     : 90-degree triangle in 4th quadrant
-vlens       : Vertical convex lens symbol
-vlozenge    : Narrow vertical diamond-like symbol
-vneedle     : Vertical, very narrow diamond
-volcano     : Active with some bad fume bubbles
+astroid        : 4-pointed concave star symbol
+circle         : Circle (similar to -Sc)
+cross          : Cross (similar to -Sx)
+crosshair      : Bullseye crosshair
+deltoid        : 3-pointed concave triangle symbol
+diamond        : Diamond (similar to -Sd)
+flash          : Lightning flash symbol
+hexagon        : Hexagon (similar to -Sh)
+hlens          : Horizontal convex lens symbol
+hlozenge       : Narrow horizontal diamond-like symbol
+hneedle        : Horizontal, very narrow diamond
+hurricane      : Hurricane symbol
+lcrescent      : Crescent with belly to the left
+lflag          : Post with flag to the left
+ltriangle      : Triangle pointing to the left
+meca           : Focal mechanism (beachball)
+octagon        : Octagon (similar to -Sg)
+pacman         : A Pacman symbol
+pentagon       : Pentagon (similar to -Sn)
+rcrescent      : Crescent with belly to the right
+rflag          : Post with flag to the right
+rtriangle      : Triangle pointing to the right
+sectoid        : Concave, triangular sector
+square         : Square (similar to -Ss)
+squaroid       : Concave square
+star           : Star (similar to -Sa)
+star3          : 3-pointed triangular star symbol
+star4          : 4-pointed diagonal star symbol
+starp          : 4-pointed polar star
+sun            : Shining sun symbol
+triangle       : Triangle (similar to -St)
+trirot1        : 90-degree triangle in 1st quadrant
+trirot2        : 90-degree triangle in 2nd quadrant
+trirot3        : 90-degree triangle in 3rd quadrant
+trirot4        : 90-degree triangle in 4th quadrant
+vlens          : Vertical convex lens symbol
+vlozenge       : Narrow vertical diamond-like symbol
+vneedle        : Vertical, very narrow diamond
+volcano        : Active with some bad fume bubbles
+QR             : GMT QR code (opaque)
+QR_transparent : GMT QR code (transparent)
