--- a/share/tools/gmt5syntax.in
+++ b/share/tools/gmt5syntax.in
@@ -1,5 +1,4 @@
-#!/usr/bin/env bash
-#! -*-perl-*-
+#!/usr/bin/env perl
 eval 'exec perl -x -wS $0 ${1+"$@"}'
   if 0;
 #
@@ -18,7 +17,7 @@ my $progname = 'gmt@GMT_INSTALL_NAME_SUFFIX@';
 
 # words to prepend with $progname
 my @modulenames = qw( backtracker blockmean blockmedian blockmode dimfilter
-filter1d fitcircle gmt2kml gmtconnect gmtconvert gmtdefaults gmtflexure \
+filter1d fitcircle gmt2kml gmtconnect gmtconvert gmtdefaults gmtflexure
 gmtget gmtgravmag3d gmtinfo gmtlogo gmtregress
 gmtmath gmtselect gmtset gmtsimplify gmtspatial gmtstitch gmtvector gmtwhich
 gravfft grd2cpt grd2xyz grdblend grdclip grdcontour grdcut grdedit
