Use cmake --build . --target check to run tests

--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -66,7 +66,7 @@ jobs:
   - bash: |
       set -x -e
       cd build
-      ctest --force-new-ctest-process -j4
+      cmake --build . --target check
     displayName: Full tests
 
   # Upload test coverage even if build fails. Keep separate to make sure this task fails
