Further cleanup of man page in PDF

--- a/doc/rst/CMakeLists.txt
+++ b/doc/rst/CMakeLists.txt
@@ -85,7 +85,7 @@ if (SPHINX_FOUND)
 		add_dependencies (docs_pdf docs_depends)
 
 		# Shrink PDF files
-		set (_docs_pdf_output GMT_API.pdf GMT_Docs.pdf GMT_Tutorial.pdf GMT_Manpages.pdf)
+		set (_docs_pdf_output GMT_API.pdf GMT_Docs.pdf GMT_Tutorial.pdf)
 		foreach (_pdf_file ${_docs_pdf_output})
 			string (REPLACE ".pdf" "_pdf" _pdf_target ${_pdf_file})
 			set (_pdf_file "${CMAKE_CURRENT_BINARY_DIR}/latex/${_pdf_file}")
@@ -135,9 +135,6 @@ if (SPHINX_FOUND)
 			COMMAND ${CMAKE_COMMAND} -E copy_if_different
 			${CMAKE_CURRENT_BINARY_DIR}/latex/GMT_Tutorial.pdf
 			${GMT_RELEASE_PREFIX}/doc_release/pdf/GMT_Tutorial.pdf
-			COMMAND ${CMAKE_COMMAND} -E copy_if_different
-			${CMAKE_CURRENT_BINARY_DIR}/latex/GMT_Manpages.pdf
-			${GMT_RELEASE_PREFIX}/doc_release/pdf/GMT_Manpages.pdf
 			DEPENDS docs_pdf_shrink git_export_release)
 		#add_depend_to_target (gmt_release _pdf_release)
 		# Manpages
@@ -163,7 +160,6 @@ if (NOT EXISTS ${GMT_INSTALL_EXTERNAL_DOC})
 		${CMAKE_CURRENT_BINARY_DIR}/latex/GMT_API.pdf
 		${CMAKE_CURRENT_BINARY_DIR}/latex/GMT_Docs.pdf
 		${CMAKE_CURRENT_BINARY_DIR}/latex/GMT_Tutorial.pdf
-		${CMAKE_CURRENT_BINARY_DIR}/latex/GMT_Manpages.pdf
 		DESTINATION ${GMT_DOCDIR}/pdf
 		COMPONENT Documentation
 		OPTIONAL)
